--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "styled-components": "^6.1.8",
     "yup": "^1.3.3"
   },
   "devDependencies": {
